--- a/docs/site-browse-bse-files.texi
+++ b/docs/site-browse-bse-files.texi
@@ -1,6 +1,6 @@
 \input texinfo
 @c %**start of header
-@settitle Contributed BEAST/BSE Files
+@settitle BSE Sound Archive
 @c %**end of header
 
 @include texiutils.texi
