--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 11 06:20:12 2004  Tim Janik  <timj@gtk.org>
+
+	* glib-extra.h: adapt to gtype.h changes.
+
 Sat Jan 10 10:27:40 2004  Tim Janik  <timj@gtk.org>
 
 	* testsfi.c (test_threads): added simple mutex test.
