--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Jan 11 06:17:51 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bsttrackroll.c: disable scopes, they seem to be broken
+	across reparentation of a parent.
+
 Sun Jan 11 04:51:53 2004  Tim Janik  <timj@gtk.org>
 
 	* docs/site-navigation.xml: create BSE sound archive indices.
