--- a/TODO
+++ b/TODO
@@ -1,4 +1,7 @@
 FIXMES:
+- default to 16 voices in tracks
+- default-initialize authors: field with user name
+- add default-settings config preference (authors, license)
 - evaluate elimination of seqid
 - fix object docu not containing plugins
 - implement auto-save feature
