--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 13 12:22:50 2004  Laurent Dhima  <laurenti@alblinux.net>
+
+	* configure.in: Added "sq" to ALL_LINGUAS.
+
 Sun Jan 11 06:17:51 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bsttrackroll.c: disable scopes, they seem to be broken
