--- a/docs/site-development.texi
+++ b/docs/site-development.texi
@@ -32,6 +32,7 @@ translations can be obtained from the following pages.
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/mn/extras/index.html,, mn},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/nl/extras/index.html,, nl},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/pt/extras/index.html,, pt},
+@uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sq/extras/index.html,, sq},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sr/extras/index.html,, sr},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sr@@Latn/extras/index.html,, sr@@Latn},
 @uref{http://developer.gnome.org/projects/gtp/status/gnome-2.6/sv/extras/index.html,, sv},
