--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 14 13:31:27 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-historic.texi: link updates.
+
 Tue Jan 13 12:22:50 2004  Laurent Dhima  <laurenti@alblinux.net>
 
 	* configure.in: Added "sq" to ALL_LINGUAS.
