--- a/TODO
+++ b/TODO
@@ -1,4 +1,8 @@
 FIXMES:
+- allow inverted synth-done (i.e. suitable for gate connecitons)
+- let the ADSR provide Gate-Out
+- reset-properties sets base-volume of BseAmplifier to 100% (should be 0)
+- add author and license display to palette
 - default to 16 voices in tracks
 - default-initialize authors: field with user name
 - add default-settings config preference (authors, license)
