--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Jan 18 01:27:13 2004  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* configure.in: Added "fr" to ALL_LINGUAS.
+
 Sat Jan 17 14:55:09 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bsttrackroll.[hc]: treat scopes as ordinary GtkWidgets.
