--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-18  Christophe Merlet  <redfox@redfoxcenter.org>
+
+	* fr.po: Added French translation.
+
 2004-01-13  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Kees van den Broek.
