--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-18  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spansih translation.
+
 2004-01-18  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* fr.po: Added French translation.
