--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan 19 15:32:21 2004  Tim Janik  <timj@gtk.org>
+
+	* docs/site-development.texi: add french translation.
+
 Sun Jan 18 01:27:13 2004  Christophe Merlet  <redfox@redfoxcenter.org>
 
 	* configure.in: Added "fr" to ALL_LINGUAS.
