--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 FIXMES:
+-udefull vs. useful
 - make signal arguments STATIC_SCOPE (avoid fblock copies)
 - allow inverted synth-done (i.e. suitable for gate connecitons)
 - let the ADSR provide Gate-Out
