--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,16 @@
+Mon Jan 19 20:19:11 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bse-plugin-generator.cc sfidl-cxx.cc sfidl-generator.cc
+	sfidl-module.cc sfidl.cc: Moved the C/C++ style comments (about this
+	being a generated file) from sfidl.cc to the code generators, as not
+	all generators will produces C/C++ish output.
+
+	* sfidl-options.cc sfidl-options.cc sfidl.cc sfidl-typelist.: Added
+	--list-types option, which lists all types which were define within the
+	.idl file.
+
+	* sfidl-parser.cc: Support "-" as filename, for parsing from stdin.
+
 Mon Jan 19 19:03:42 2004  Tim Janik  <timj@gtk.org>
 
 	* sfidl-module.cc (generate_procedures): fix g_value_get_object<>() usage.
