--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,10 @@
+Mon Jan 19 23:12:47 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: implement comparison operators for class String,
+	added operator*() to class RecordHandle<>.
+
+	* testcxx.cc: more string tests.
+
 Mon Jan 19 22:50:20 2004  Tim Janik  <timj@gtk.org>
 
 	* sficxx.h: added RecordHandle<>(), which implements smart
