--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,12 @@
+Tue Jan 20 00:20:07 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: define Bool, Int, Num, Real, BBlock, FBlock and Rec
+	type aliases. made String NULL save (for cstring==NULL which can
+	happen due to C accessing cstring).
+	implemented class Sequence<> template.
+
+	* testcxx.cc: added sequence tests.
+
 Mon Jan 19 23:12:47 2004  Tim Janik  <timj@gtk.org>
 
 	* sficxx.h: implement comparison operators for class String,
