--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 20 00:46:39 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: added operator+() to strings.
+
 Tue Jan 20 00:39:48 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-module.cc sfidl-cxx.cc: Use Sfi::String instead of
