--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 20 00:50:57 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sficxx.h: Added sfi_value_(set|get)_cxxstring here.
+
 Tue Jan 20 00:46:39 2004  Tim Janik  <timj@gtk.org>
 
 	* sficxx.h: added operator+() to strings.
