--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jan 20 01:01:32 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* evaluator/bseevaluator.cc: Adapted source to the fact that
+	bse-plugin-generator now finally uses Sfi::String instead of a
+	gchar* representations.
+
 Sat Jan 10 10:09:29 2004  Tim Janik  <timj@gtk.org>
 
 	* evaluator/compiler.cc: fix include.
