--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jan 20 01:35:01 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: moved GValue get/set functions for strings into class String.
+	* sfidl-cxx.cc:
+	* sfidl-module.cc: changed usage cases.
+
 Tue Jan 20 00:50:57 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sficxx.h: Added sfi_value_(set|get)_cxxstring here.
