--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,9 @@
+Tue Jan 20 02:18:22 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sficxx.h: The bool operator and is_null() should be const.
+
+	* sfidl-cxx.cc: Use RecordHandle<...> instead of SmartPtr<...>.
+
 Tue Jan 20 01:57:47 2004  Tim Janik  <timj@gtk.org>
 
 	* sficxx.h: implement bool operator, is_null() and operator[]
