Use RecordHandle<...> instead of SmartPtr<...> for records.
Tue Jan 20 02:16:31 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/cxxbinding.cc: Use RecordHandle<...> instead of SmartPtr<...>
	for records.

svn path=/trunk/; revision=1844

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Jan 20 02:16:31 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* tests/cxxbinding.cc: Use RecordHandle<...> instead of SmartPtr<...>
+	for records.
+
 Tue Jan 20 01:17:06 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/Makefile.am: Fix includes (changes due to sficxx.h).
