--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 20 04:52:45 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* bserecords.idl bseamplifier.idl: Add "using namespace Sfi;".
+
 Tue Jan 20 03:05:25 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bsecxxsmart.h Makefile.am: Removed obsolete code.
