--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,16 @@
+Tue Jan 20 05:49:22 2004  Tim Janik  <timj@gtk.org>
+
+	* sfidl-module.cc: simplified type speical casing by moving
+	to C++ type wrappers from sficxx.h.
+
+	* sfivalues.[hc]: implemented sfi_value_dup_rec().
+
+Tue Jan 20 05:47:24 2004  Tim Janik  <timj@gtk.org>
+
+	* sficxx.h: implemented BBlock, FBlock, Rec (for SfiRec) and
+	ObjectHandle (for GObject) wrappers. fixed up assignment
+	operators.
+
 Tue Jan 20 04:50:39 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-parser.cc: Make ; following the namespace declaration
