adapt to C++ type changes.
Tue Jan 20 05:47:04 2004  Tim Janik  <timj@gtk.org>

        * bsesniffer.cc: adapt to C++ type changes.

svn path=/trunk/; revision=1855

--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Tue Jan 20 05:47:04 2004  Tim Janik  <timj@gtk.org>
+
+	* bsesniffer.cc: adapt to C++ type changes.
+
 Tue Jan 20 04:52:45 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bserecords.idl bseamplifier.idl: Add "using namespace Sfi;".
