--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,10 @@
+Wed Jan 21 03:21:00 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-module.cc: More work on records: really call type
+	registration macros.
+
+	* sfidl-namespace.cc: Fixlet: no ; after namespaces.
+
 Tue Jan 20 23:23:28 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* bse-plugin-generator.cc sfidl-options.cc: Set generateBoxedTypes
