--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,7 @@
+Wed Jan 21 03:35:59 2004  Tim Janik  <timj@gtk.org>
+
+	* bsecxxplugin.h (BSE_CXX_DECLARE_RECORD): implementation fixups.
+
 Tue Jan 20 15:30:44 2004  Tim Janik  <timj@gtk.org>
 
 	* bseexports.h: added BseExportNodeBoxed for records and
