--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Jan 21 03:34:54 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstutils.c (sfidl_pspec_BoxedRec): implement BoxedRec pspec
+	constructors.
+
 Wed Jan 21 03:26:00 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* tests/testplugin.*: Commented out TestRecord (doesn't compile right
