--- a/TODO
+++ b/TODO
@@ -354,5 +354,6 @@ other stuff:
   - Makefile.plugins doesn't get regenerated properly
   - C++ Classes _need_(!) documentation (i.e. Sfi::FBlock, Sfi::String)
   - add a dependancy to $SFIDL for beast-gtk/bstrecords.idl
+  - rename bindings to client and server (instead of interface and implementation)
 
 vim:set ts=8 sts=2 sw=2:
