--- a/docs/site-news.texi
+++ b/docs/site-news.texi
@@ -11,6 +11,15 @@
 @unnumbered What's New?
 
 
+@newsTitle{Thursday 22 Jan 2004, Wiki openings}
+
+The @beast website has a
+@uref{http://beast.gtk.org/wiki.php,, Wiki Area} now, all users and
+visitors are invited to @uref{http://beast.gtk.org/wiki.php?id=Discussion,, discuss}
+various topics or to sign the
+@uref{http://beast.gtk.org/wiki.php?id=GuestBook,, GuestBook}.
+
+
 @newsTitle{Saturday 10 Jan 2004, BSE Sound Archive}
 
 We just opened up the
@@ -104,16 +113,6 @@ integration with external MIDI events, a new C++ based plugin interface,
 MIME type support and @emph{lots} of language translations.
 The details are outlined in the
 @uref{beast-doc://release-news,,NEWS section}.
-
-
-@newsTitle{August 27 Jul 2003, Site closed due to software patents}
-
-The BEAST website joins the
-@uref{http://swpat.ffii.org/group/demo/index.en.html,, online demonstration}
-of the
-@uref{http://www.ffii.org/,,Foundation for a Free Information Infrastructure}
-against software patents and closes its front
-page on August the 27th.
 
 
 @bye
