--- a/docs/site-search.texi
+++ b/docs/site-search.texi
@@ -19,7 +19,7 @@ PHPX
 <INPUT type=submit VALUE=''Google Search''></FORM>
 XPHP
 
-@unnumberedsubsec Search the @uref{http://birgrave/~timj/beast-preview/wiki.php,,wiki section}
+@unnumberedsubsec Search the @uref{http://beast.gtk.org/wiki.php,,wiki area}
 @itemize
 @item Search @uref{http://beast.gtk.org/wiki.php?id=SearchPages,, Wiki Pages}
 @item Search @uref{http://beast.gtk.org/wiki.php?id=PowerSearch,, Wiki Page Text}
