--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Fri Jan 23 02:28:58 2004  Tim Janik  <timj@gtk.org>
+
+	* bsecxxplugin.h: complete record and sequence registration macros.
+
+	* bseexports.h: boxed types supply SfiBoxedFields.
+
+	* bsetype.h: fixed sfidl pspec constructors.
+
 Wed Jan 21 03:35:59 2004  Tim Janik  <timj@gtk.org>
 
 	* bsecxxplugin.h (BSE_CXX_DECLARE_RECORD): implementation fixups.
