--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Sat Jan 24 01:01:43 2004  Stefan Westerfeld  <stefan@space.twc.de>
+
+	* sfidl-cxx.cc sficxx.h: Made the to_seq conversion function static,
+	similar to to_rec.
+
 Fri Jan 23 19:27:10 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-cxx.cc: CodeGeneratorCxxBase::printRecSeqImpl: generate
