--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Jan 24 01:12:44 2004  Tim Janik  <timj@gtk.org>
+
+	* tests/testplugin.cc: fix missing type registration macros.
+
 Fri Jan 23 22:39:49 2004  Tim Janik  <timj@gtk.org>
 
 	* tests/Makefile.am: reenable test builds which compile again due to
